spec/validation-examples/parse_errors/no_question.rfml
#! no_question_test
# title: No Question Test
# start_uri: /

This is an action without a question?
